--- a/src/app/home/requests/request-dialog/request-dialog.component.html
+++ b/src/app/home/requests/request-dialog/request-dialog.component.html
@@ -7,8 +7,8 @@
           <mat-radio-group
             aria-label="Select a work mode"
             formControlName="type">
-            <mat-radio-button value="1">In the office</mat-radio-button>
-            <mat-radio-button value="0">Remotely</mat-radio-button>
+            <mat-radio-button value="1" color="primary">In the office</mat-radio-button>
+            <mat-radio-button value="0" color="primary">Remotely</mat-radio-button>
           </mat-radio-group>
 
         <div class="range">
