--- a/src/app/home/reservations/reservations.component.html
+++ b/src/app/home/reservations/reservations.component.html
@@ -30,7 +30,7 @@
     <th mat-header-cell *matHeaderCellDef class="th-text-center">Duration</th>
     <td mat-cell *matCellDef="let element">
       <ul style="list-style-type:none; margin-top: 15px;">
-        <li *ngFor="let date of element['requested_for']">
+        <li *ngFor="let date of element['requested_for']" style="text-align: center">
           {{ datePipe.transform( date.value, "dd-MMM-yyyy hh:mm" ) }}
         </li>
       </ul>
